s/css/_styles.css
/* ... */
.nav-tabs {
  margin-bottom: 0; }

.tab-content {
  margin-top: -1px;
  margin-bottom: 20px; }

.accordion-heading a {
  background-color: #E5E5E5;
  color: #666; }

.accordion-heading a:hover {
  background-color: #9FB44F;
  color: #fff;
  text-decoration: none; }

.sidebar .well {
  margin-bottom: 50px; }

.nav-list > .active > a,
.nav-list > .active > a:hover {
  background-color: #9aae4c; }

.nav-list i {
  opacity: 0.6; }

.nav-list > .active i {
  opacity: 1; }

.nav-list a {
  color: #2f2f2f; }

/*fluid offsets*/
.pe-offset1 {
  margin-left: 8.5635359% !important; }

.pe-offset2 {
  margin-left: 17.09401706% !important; }

blockquote {
  border: none; }

blockquote p {
  font-size: 22px;
  color: #5F5F5F;
  line-height: 28px;
  font-family: Georgia, Constantia, Lucida, serif; }

pre.prettyprint {
  margin-bottom: 20px; }

.row-spacing {
  margin-top: 20px; }

/*back to top button*/
.btt {
  position: fixed;
  bottom: 30px;
  right: 30px;
  opacity: 0.4;
  background-color: #9aae4c;
  padding: 15px;
  visibility: visible;
  -webkit-transition: opacity 0.4s linear;
  -moz-transition: opacity 0.4s linear;
  -ms-transition: opacity 0.4s linear;
  -o-transition: opacity 0.4s linear;
  transition: opacity 0.4s linear; }

.btt:hover {
  opacity: 0.8; }

.btt.disabled {
  visibility: hidden;
  opacity: 0; }


/* END GENERAL */
/*styles for all sizes*/
header .nav-collapse {
  position: relative; }

header .nav-collapse ul.nav {
  margin-right: 0; }

/*header*/
header .smedia {
  position: absolute;
  top: 10px;
  right: 0; }

.tagline h2 {
  margin-bottom: 0;
  padding-top: 15px;
  padding-bottom: 15px;
}

.btn-success {
  background-color: #9fb44f;
  background-image: -moz-linear-gradient(top, #a5bb52, #8da046);
  background-image: -ms-linear-gradient(top, #a5bb52, #8da046);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a5bb52), to(#8da046));
  background-image: -webkit-linear-gradient(top, #a5bb52, #8da046);
  background-image: -o-linear-gradient(top, #a5bb52, #8da046);
  background-image: linear-gradient(top, #a5bb52, #8da046);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5bb52', endColorstr='#8da046', GradientType=0);
  border-color: #829341 #829341 #6f7d37;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  filter: progid:dximagetransform.microsoft.gradient(enabled=false); }

.btn-success:hover,
.btn-success:active,
.btn-success.active,
.btn-success.disabled,
.btn-success[disabled] {
  background-color: #7f903f; }

.btn-success:active,
.btn-success.active {
  background-color: #7f903f \9; }

.btn:hover {
  background-position: 0 -36px !important; }

/*additional margin to center icons inside buttons & add spacing*/
.btn [class*=" icon-"], .btn [class^="icon-"] {
  margin-right: 8px; }

/*main content*/
.mainContent {
  padding-top: 20px;
  border-top: 2px solid #ffffff; }

.innerSpacer {
  margin-right: 20px; }

.innerSpacer.left {
  margin-right: 0px;
  margin-left: 20px; }

/*home who what why*/
.featuredContent h1 {
  margin-bottom: 35px; }

.featuredContent h1 span {
  margin-right: 10px; }

.featuredContent > div {
  margin-bottom: 40px; }

/*blog*/
.post {
  margin-bottom: 60px; }

.post.full {
  margin-bottom: 30px; }

.post .post-date {
  margin-bottom: 6px;
  color: #9aae4c !important; }

.post .post-title h3 {
  margin-bottom: 40px;
  font-size: 24px; }

.post.full .post-title h3 {
  margin-bottom: 10px; }

.post.full .post-title {
  margin-bottom: 40px; }

.post.full .post-title .post-meta {
  margin-bottom: 0; }

.post.full .post-title .post-meta a {
  color: #666; }

.post.full .post-title .post-meta a:hover {
  border-bottom: 1px solid #666;
  color: #444; }

.post .post-title a {
  color: #2f2f2f; }

.post .post-title a:hover {
  text-decoration: none; }

.post .post-image {
  margin-bottom: 40px; }

.spacer {
  visibility: hidden; }

.post .post-thumbs > div {
  margin-bottom: 15px; }

.post .post-meta p {
  font-size: 11px;
  margin-bottom: 5px; }

.post .post-meta p a {
  color: #aaa; }

.post .post-meta p a:hover {
  text-decoration: none;
  color: #666; }

.post .post-meta .comments-num span {
  margin-left: 5px;
  opacity: 0.2; }

.post .post-content {
  border-bottom: 1px solid #efefef;
  padding-bottom: 30px;
  color: #666; }

.post .post-content p {
  color: #666; }

.post .contentWrap {
  padding-bottom: 40px;
  border-bottom: 1px solid #eeeeee; }

.post ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
  margin-bottom: 20px; }

.post ul li span {
  margin-right: 10px;
  opacity: 0.5; }

.post ol {
  margin-bottom: 20px; }

.post blockquote {
  background: #e5e5e5;
  padding: 30px;
  margin-bottom: 0; }

.post.full blockquote {
  margin-bottom: 20px; }

.post blockquote small {
  color: #666; }

.post blockquote p a {
  color: #0088cc; }

.post blockquote p a:hover {
  text-decoration: none;
  color: #005580; }

.shareBox {
  margin-top: 20px; }

/*faq*/
.faq {
  margin-bottom: 20px;
  overflow: hidden; }

.faq-heading {
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  background: #9aae4c;
  color: #fff;
  padding: 8px 20px 8px 20px;
  cursor: pointer; }

.faq-heading > div {
  font-weight: bold; }

.faq-heading > div i {
  margin-right: 8px; }

.faq-heading:hover {
  background-color: #E5E5E5; }

.faq-heading:hover > div {
  color: #666; }

.faq-heading > a {
  color: #2F2F2F;
  margin-left: 8px; }

.faq-body {
  margin-top: -1px; }

.faq-body .faq-inner {
  border: 1px solid #DDDDDD;
  border-radius: 0 0 4px 4px;
  background-color: #fff;
  padding: 20px 20px 10px 20px; }

.faq-body {
  height: auto; }

.faq-body.collapse {
  height: 0; }

/*portfolio*/
.pageTitle.portfolio {
  border-bottom: 1px solid #eeeeee;
  margin-bottom: 35px;
  padding-bottom: 20px; }

.pageTitle.portfolio h1 {
  margin-bottom: 0; }

.portfolio .filter {
  margin-top: 10px;
  overflow: hidden; }

.portfolio .filter p {
  float: right;
  margin-bottom: 0; }
/* ... */

